--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
+    "color-convert": "^1.8.2",
+    "delta-e": "0.0.7",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -14,7 +16,9 @@
     "react-redux": "^4.4.5",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
-    "redux-thunk": "^2.1.0"
+    "redux-thunk": "^2.1.0",
+    "tinycolor2": "^1.4.1",
+    "tracking": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
