--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^15.3.2",
     "react-image-gallery": "^0.7.3",
     "react-redux": "^4.4.5",
+    "react-swipeable": "^3.7.0",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
