--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "delta-e": "0.0.7",
     "isomorphic-fetch": "^2.2.1",
     "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.3.2",
     "react-image-gallery": "^0.7.3",
     "react-redux": "^4.4.5",
